2018-08-27  Devin Rousso  <drousso@apple.com>

        Web Inspector: when scrolling a virtualized TreeOutline, only update the DOM periodically
        https://bugs.webkit.org/show_bug.cgi?id=188960

        Reviewed by Brian Burg.

        After each `updateVirtualizedElements` call, remember the `WI.TreeElement` that is located
        halfway within the visible list. When handling each "scroll", only regenerate the
        `WI.TreeOutline` DOM if the user has scrolled `extraRows` distance.

        * UserInterface/Views/TreeOutline.js:
        (WI.TreeOutline):
        (WI.TreeOutline.prototype.registerScrollVirtualizer):
        (WI.TreeOutline.prototype.updateVirtualizedElements):
        (WI.TreeOutline.prototype._calculateVirtualizedValues): Added.

2018-08-27  Devin Rousso  <drousso@apple.com>

        Web Inspector: provide autocompletion for event breakpoints
        https://bugs.webkit.org/show_bug.cgi?id=188717

        Reviewed by Brian Burg.

        * UserInterface/Controllers/DOMTreeManager.js:
        (WI.DOMTreeManager):
        (WI.DOMTreeManager.prototype.getSupportedEventNames): Added.

        * UserInterface/Views/EventBreakpointPopover.js:
        (WI.EventBreakpointPopover):
        (WI.EventBreakpointPopover.prototype.show):
        (WI.EventBreakpointPopover.prototype.dismiss): Added.
        (WI.EventBreakpointPopover.prototype.completionSuggestionsClickedCompletion): Added.
        (WI.EventBreakpointPopover.prototype._presentOverTargetElement):
        (WI.EventBreakpointPopover.prototype._showSuggestionsView): Added.

2018-08-27  Keith Rollin  <krollin@apple.com>

        Build system support for LTO
        https://bugs.webkit.org/show_bug.cgi?id=187785
        <rdar://problem/42353132>

        Reviewed by Dan Bernstein.

        Update Base.xcconfig and DebugRelease.xcconfig to optionally enable
        LTO.

        * Configurations/Base.xcconfig:
        * Configurations/DebugRelease.xcconfig:
