@@ -1,3 +1,12 @@
+2018-08-27  Andy Estes  <aestes@apple.com>
+
+        Teach Web Inspector how to complete keywords for -apple-pay-button-style and -apple-pay-button-type
+        https://bugs.webkit.org/show_bug.cgi?id=189001
+
+        Reviewed by Devin Rousso.
+
+        * UserInterface/Models/CSSKeywordCompletions.js:
+
 2018-08-27  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: when scrolling a virtualized TreeOutline, only update the DOM periodically
